add MQTT Connector reference

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>unapp Template</title>
+	<title>Jdesi</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -58,7 +58,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-2">
-							<div id="colorlib-logo"><a href="index.html">jdesi</a></div>
+                            <div id="colorlib-logo"><a href="index.html">JDESI</a></div>
 						</div>
 					</div>
 				</div>
@@ -73,10 +73,11 @@
 					<div class="container">
 						<div class="col-md-12 col-md-offset-0">
 							<div class="animate-box">
-								<h2>Take on your biggest projects</h2>
-								<p>with jdesi's products</p>
+                                <h2>Take a look at Jdesi's solutions</h2>
+                                <br>
+                                <a class="btn btn-primary btn-lg" href="http://juan.desi/mqtt-connector">MQTT Connector</a>
 							</div>
-						</div>
+                        </div>
 					</div>
 				</div>
 			</div>
@@ -88,10 +89,12 @@
 					<div class="row">
 						<div class="col-md-12 text-center">
 							<p>
-								 <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --><br> 
-								Demo Images: <a href="http://unsplash.co/" target="_blank">Unsplash</a>, <a href="http://pexels.com/" target="_blank">Pexels</a>
+								 <i class="icon-github" aria-hidden="true"></i> juandesi 
+								 <br>
+								 <i class="icon-envelope"></i> juandesimoni@gmail.com
+								 <br>
+								 <br>
+								 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved
 							</p>
 						</div>
 					</div>
