--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Jdesi</title>
+	<title>juan.desi</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
@@ -73,7 +73,7 @@
 					<div class="container">
 						<div class="col-md-12 col-md-offset-0">
 							<div class="animate-box">
-                                <h2>Take a look at Jdesi's solutions</h2>
+                                <h2>v</h2>
                                 <br>
                                 <a class="btn btn-primary btn-lg" href="http://juan.desi/mqtt-connector">MQTT Connector</a>
 							</div>
